--- a/packages/medusa-strapi/template/package.json
+++ b/packages/medusa-strapi/template/package.json
@@ -1,10 +1,4 @@
 {
     "name": "medusa-strapi",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Sagi Ekstein",
-    "license": "ISC"
+    "version": "1.0.0"
   }
