--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -17,18 +17,21 @@
     "@aws-sdk/signature-v4": "^3.78.0",
     "@aws-sdk/util-format-url": "^3.78.0",
     "@strapi/logger": "^4.3.6",
-    "@strapi/plugin-seo": "^1.7.5",
-    "@strapi/strapi": "4.4.1",
-    "@strapi/plugin-users-permissions": "4.4.1",
     "@strapi/plugin-i18n": "4.4.1",
+    "@strapi/plugin-seo": "^1.7.5",
+    "@strapi/plugin-users-permissions": "4.4.1",
+    "@strapi/provider-upload-aws-s3": "^4.5.0",
+    "@strapi/strapi": "4.4.1",
     "add": "^2.0.6",
     "css-loader": "^6.7.1",
     "download-file-sync": "^1.0.4",
     "fs": "^0.0.1-security",
     "i": "^0.3.7",
+    "koa-passport": "^5.0.0",
     "npm": "^8.12.1",
     "pg": "8.6.0",
-    "strapi-middleware-cache": "^2.1.7",
+    "sentry": "^0.1.2",
+    "strapi-middleware-cache": "^2.1.8",
     "style-loader": "^3.3.1",
     "yarn": "^1.22.19"
   },
@@ -45,12 +48,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.25.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.4",
     "webpack": "^5.73.0"
   }
