--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sgftech/strapi-plugin-medusajs",
+  "name": "strapi-plugin-medusajs",
   "version": "1.0.0",
   "description": "This is the description of the plugin.",
   "strapi": {
