--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-plugin-medusajs",
-  "version": "1.2.9-alpha-4",
+  "version": "1.2.9-alpha-17",
   "description": "This is the description of the plugin.",
   "main": "dist/server/index.js",
   "strapi": {
@@ -9,7 +9,9 @@
     "kind": "plugin"
   },
   "repository": "https://github.com/SGFGOV/strapi-plugin-medusajs.git",
+  
   "dependencies": {
+    "@strapi/helper-plugin": "^4.5.1",
     "@types/bcrypt": "^5.0.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1"
@@ -20,6 +22,7 @@
     "@aws-sdk/protocol-http": "^3.78.0",
     "@aws-sdk/signature-v4": "^3.78.0",
     "@aws-sdk/util-format-url": "^3.78.0",
+    "@babel/core": "^7.20.2",
     "@strapi/logger": "^4.3.6",
     "@strapi/plugin-i18n": "4.4.1",
     "@strapi/plugin-seo": "^1.7.5",
@@ -40,9 +43,11 @@
     "jest": "^29.3.0",
     "node-notifier": "^10.0.1",
     "pg": "^8.8.0",
+    "react-is": "^18.2.0",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
-    "typescript": "4.6.3"
+    "typescript": "4.6.3",
+    "webpack": "^5.75.0"
   },
   "author": {
     "name": "A Strapi developer"
@@ -65,5 +70,11 @@
   "peerDependencies": {
     "bcryptjs": "^2.4.3"
   },
-  "files": [ "dist", "*.js","package.json","tsconfig.json","admin" ]
+  "files": [
+    "dist",
+    "*.js",
+    "package.json",
+    "tsconfig.json",
+    "admin"
+  ]
 }
