--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medusa-plugin-strapi-ts",
-  "version": "1.2.4",
+  "version": "1.2.10",
   "description": "A plugin for medusa to use strapi in the backend as the cms in typescript",
   "main": "index.js",
   "types": "index.d.ts",
@@ -29,6 +29,7 @@
     "@medusajs/medusa": "^1.x",
     "@types/express": "^4.17.14",
     "@types/jest": "^27.4.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
@@ -62,6 +63,7 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "medusa-core-utils": "^1.1.31",
     "medusa-test-utils": "^1.1.37",
     "typeorm": "^0.2.41"
