--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medusa-plugin-strapi-ts",
-  "version": "1.3.3",
+  "version": "1.3.4-alpha-3",
   "description": "A plugin for medusa to use strapi in the backend as the cms in typescript",
   "main": "index.js",
   "types": "index.d.ts",
@@ -44,6 +44,7 @@
     "eslint-plugin-file-progress": "^1.3.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27.5.0",
+    "medusa-extender": "^1.7.7",
     "medusa-interfaces": "1.x",
     "mongoose": "^6.2.0",
     "rimraf": "^3.0.2",
