--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-plugin-medusajs",
-  "version": "1.2.9-alpha-17",
+  "version": "1.2.9-alpha-19",
   "description": "This is the description of the plugin.",
   "main": "dist/server/index.js",
   "strapi": {
@@ -9,9 +9,8 @@
     "kind": "plugin"
   },
   "repository": "https://github.com/SGFGOV/strapi-plugin-medusajs.git",
-  
   "dependencies": {
-    "@strapi/helper-plugin": "^4.5.1",
+    "@strapi/helper-plugin": "^4.5.4",
     "@types/bcrypt": "^5.0.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1"
@@ -23,6 +22,7 @@
     "@aws-sdk/signature-v4": "^3.78.0",
     "@aws-sdk/util-format-url": "^3.78.0",
     "@babel/core": "^7.20.2",
+    "@strapi/icons": "^1.4.0",
     "@strapi/logger": "^4.3.6",
     "@strapi/plugin-i18n": "4.4.1",
     "@strapi/plugin-seo": "^1.7.5",
@@ -38,12 +38,12 @@
     "@types/koa-logger": "^3.1.2",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^18.11.9",
+    "@types/react-router-dom": "^5.3.3",
     "download-file-sync": "^1.0.4",
     "eslint": "^8.27.0",
     "jest": "^29.3.0",
     "node-notifier": "^10.0.1",
     "pg": "^8.8.0",
-    "react-is": "^18.2.0",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "4.6.3",
