--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-plugin-medusajs",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "description": "This plugin enables handshaking and sync between strapi and medusajs",
   "main": "dist/server/index.js",
   "strapi": {
@@ -39,8 +39,14 @@
     "@types/koa-router": "^7.4.4",
     "@types/node": "^18.11.9",
     "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "download-file-sync": "^1.0.4",
     "eslint": "^8.27.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-file-progress": "^1.3.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.0",
     "node-notifier": "^10.0.1",
     "pg": "^8.8.0",
