--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medusa-plugin-strapi-ts",
-  "version": "1.4.0",
+  "version": "1.4.2",
   "description": "A plugin for medusa to use strapi in the backend as the cms in typescript",
   "main": "index.js",
   "types": "index.d.ts",
@@ -43,7 +43,9 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-file-progress": "^1.3.0",
-    "eslint-plugin-prettier": "^4.2.1",
+   
+    "prettier": "^2.7.1",
+    
     "jest": "^27.5.0",
     "medusa-extender": "^1.7.7",
     "medusa-interfaces": "1.x",
