--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,8 +10,8 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "declaration": false,
-    "sourceMap": false,
+    "declaration": true,
+    "sourceMap": true,
     "outDir": ".",
     "rootDir": "src",
     "baseUrl": "src"
