--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "type": "commonjs",
-  "description": "A Strapi application",
+  "description": "Strapi Implementation for medusa market ",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
@@ -11,16 +11,21 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@aws-sdk/credential-provider-node": "^3.100.0",
+    "@aws-sdk/client-sts": "^3.183.0",
+    "@aws-sdk/credential-provider-node": "^3.183.0",
     "@aws-sdk/hash-node": "^3.78.0",
     "@aws-sdk/protocol-http": "^3.78.0",
     "@aws-sdk/signature-v4": "^3.78.0",
     "@aws-sdk/util-format-url": "^3.78.0",
+    "@offset-dev/strapi-calendar": "^0.0.9",
+    "@strapi/icons": "^1.4.1",
     "@strapi/logger": "^4.3.6",
-    "@strapi/plugin-i18n": "4.4.1",
+    "@strapi/plugin-i18n": "^4.5.4",
+    "@strapi/plugin-sentry": "^4.5.4",
     "@strapi/plugin-seo": "^1.7.5",
     "@strapi/plugin-users-permissions": "4.4.1",
-    "@strapi/provider-upload-aws-s3": "^4.5.0",
+    "@strapi/provider-email-sendgrid": "^4.5.4",
+    "@strapi/provider-upload-aws-s3": "^4.5.4",
     "@strapi/strapi": "4.4.1",
     "add": "^2.0.6",
     "css-loader": "^6.7.1",
@@ -32,7 +37,8 @@
     "pg": "8.6.0",
     "sentry": "^0.1.2",
     "strapi-middleware-cache": "^2.1.8",
-    "strapi-plugin-medusajs": "/home/ec2-user/environment/testing/test-store-enhanced/temp/strapi-plugin-medusajs/strapi-plugin-medusajs-1.2.9-alpha-19.tgz",
+    "strapi-plugin-medusajs": "^1.4.6",
+    "strapi-plugin-meilisearch": "^0.8.2",
     "style-loader": "^3.3.1",
     "yarn": "^1.22.19"
   },
