--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "Govind Diwakar <govind.diwakar@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "clean": "./node_modules/.bin/rimraf services/ models/ migrations/ api/ subscribers/ utils/ index.js index.map.js",
+    "clean": "./node_modules/.bin/rimraf types/ services/ models/ migrations/ api/ subscribers/ utils/ index.js index.map.js",
     "build": "npm run clean && tsc -p tsconfig.json",
     "watch": "tsc --watch",
     "test": "jest"
@@ -43,14 +43,16 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-file-progress": "^1.3.0",
-    "prettier": "^2.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27.5.0",
     "medusa-extender": "^1.7.7",
     "medusa-interfaces": "1.x",
     "mongoose": "^6.2.0",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
@@ -69,31 +71,5 @@
     "medusa-core-utils": "^1.1.31",
     "medusa-test-utils": "^1.1.37",
     "typeorm": "^0.2.41"
-  },
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.spec.json"
-      }
-    },
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "<rootDir>/node_modules/"
-    ],
-    "rootDir": "src",
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
-    "transform": {
-      ".ts": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "./coverage",
-    "testEnvironment": "node"
   }
 }
