--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "test": "jest --forceExit --detectOpenHandles"
   },
   "dependencies": {
     "@aws-sdk/client-sts": "^3.183.0",
@@ -66,8 +67,19 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
     "prettier": "^2.7.1",
+    "sqlite3": "^5.1.4",
+    "supertest": "^6.3.3",
     "typescript": "^4.8.4",
     "webpack": "^5.73.0"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      ".tmp",
+      ".cache"
+    ],
+    "testEnvironment": "node"
   }
 }
