--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@aws-sdk/protocol-http": "^3.78.0",
     "@aws-sdk/signature-v4": "^3.78.0",
     "@aws-sdk/util-format-url": "^3.78.0",
+    "@notum-cz/strapi-plugin-content-versioning": "^0.4.7",
     "@offset-dev/strapi-calendar": "^0.0.9",
+    "@sgftech/passport-saasform": "^0.0.20",
     "@strapi/icons": "^1.4.1",
     "@strapi/logger": "^4.3.6",
     "@strapi/plugin-i18n": "^4.5.4",
@@ -35,11 +37,16 @@
     "i": "^0.3.7",
     "koa-passport": "^5.0.0",
     "npm": "^8.12.1",
+    "patch-package": "^6.5.0",
     "pg": "8.6.0",
     "sentry": "^0.1.2",
+    "strapi-google-translator": "^1.0.7",
+    "strapi-html-editor": "^1.0.2",
     "strapi-middleware-cache": "^2.1.8",
+    "strapi-plugin-generate-data": "^1.0.21",
     "strapi-plugin-medusajs": "^1.4.6",
     "strapi-plugin-meilisearch": "^0.8.2",
+    "strapi-plugin-sitemap": "^2.0.8",
     "style-loader": "^3.3.1",
     "yarn": "^1.22.19"
   },
