--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "medusa-interfaces": "latest"
   },
   "dependencies": {
+    "@strapi/plugin-users-permissions": "^4.5.5",
     "@types/bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
