--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "@notum-cz/strapi-plugin-content-versioning": "^0.4.7",
     "@offset-dev/strapi-calendar": "^0.0.9",
     "@sgftech/passport-saasform": "^0.0.20",
-    "@sgftech/strapi-plugin-sso": "/home/ec2-user/environment/testing/test-store-enhanced/private-applications/strapi-plugin-sso-saasform/sgftech-strapi-plugin-sso-0.1.8.tgz",
+    "@sgftech/strapi-plugin-sso": "/home/ec2-user/environment/testing/test-store-enhanced/private-applications/strapi-plugin-sso-saasform/sgftech-strapi-plugin-sso-0.1.10.tgz",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
-    "@strapi/logger": "^4.3.6",
-    "@strapi/plugin-i18n": "^4.5.4",
-    "@strapi/plugin-sentry": "^4.5.4",
+    "@strapi/logger": "4.3.6",
+    "@strapi/plugin-i18n": "4.3.6",
+    "@strapi/plugin-sentry": "4.3.6",
     "@strapi/plugin-seo": "^1.7.5",
-    "@strapi/plugin-users-permissions": "^4.5.4",
-    "@strapi/provider-email-sendgrid": "^4.5.4",
-    "@strapi/provider-upload-aws-s3": "^4.5.4",
-    "@strapi/strapi": "^4.5.4",
+    "@strapi/plugin-users-permissions": "4.3.6",
+    "@strapi/provider-email-sendgrid": "4.3.6",
+    "@strapi/provider-upload-aws-s3": "4.3.6",
+    "@strapi/strapi": "4.3.6",
     "add": "^2.0.6",
     "css-loader": "^6.7.1",
     "download-file-sync": "^1.0.4",
@@ -43,13 +43,14 @@
     "patch-package": "^6.5.0",
     "pg": "8.6.0",
     "sentry": "^0.1.2",
+    "sharp": "^0.31.3",
     "strapi-google-translator": "^1.0.7",
     "strapi-html-editor": "^1.0.2",
     "strapi-middleware-cache": "^2.1.8",
     "strapi-plugin-comments": "^2.2.3",
     "strapi-plugin-generate-data": "^1.0.21",
     "strapi-plugin-io": "^1.1.2",
-    "strapi-plugin-local-image-sharp": "^1.2.1",
+    "strapi-plugin-local-image-sharp": "*",
     "strapi-plugin-medusajs": "/home/ec2-user/environment/testing/test-store-enhanced/public-plugins/strapi-plugin-medusajs/strapi-plugin-medusajs-1.4.11.tgz",
     "strapi-plugin-meilisearch": "^0.8.2",
     "strapi-plugin-sitemap": "^2.0.8",
@@ -86,13 +87,5 @@
     "supertest": "^6.3.3",
     "typescript": "^4.8.4",
     "webpack": "^5.73.0"
-  },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      ".tmp",
-      ".cache"
-    ],
-    "testEnvironment": "node"
   }
 }
