--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mongoose": "^6.2.0",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "supertest": "^6.3.3",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
@@ -68,7 +69,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "medusa-core-utils": "^1.1.31",
+    "medusa-core-utils": "^1.1.37",
     "medusa-test-utils": "^1.1.37",
     "typeorm": "^0.2.41"
   }
