--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "lint" : "eslint . --ext .js --fix",
+    "lint": "eslint . --ext .js --fix",
     "strapi": "strapi",
     "test": "jest --forceExit --detectOpenHandles --silent",
     "postinstall": "patch-package"
@@ -52,7 +52,7 @@
     "strapi-plugin-generate-data": "^1.0.21",
     "strapi-plugin-io": "^1.1.2",
     "strapi-plugin-local-image-sharp": "*",
-    "strapi-plugin-medusajs": "/home/ec2-user/environment/testing/test-store-enhanced/public-plugins/strapi-plugin-medusajs/strapi-plugin-medusajs-1.4.11.tgz",
+    "strapi-plugin-medusajs": "^3.0.3",
     "strapi-plugin-meilisearch": "^0.8.2",
     "strapi-plugin-sitemap": "^2.0.8",
     "style-loader": "^3.3.1",
