fix: upgrade to 4.5.5

--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "@sgftech/strapi-plugin-sso": "/home/ec2-user/environment/testing/test-store-enhanced/private-applications/strapi-plugin-sso-saasform/sgftech-strapi-plugin-sso-0.1.10.tgz",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
-    "@strapi/logger": "4.5.4",
-    "@strapi/plugin-i18n": "4.5.4",
-    "@strapi/plugin-sentry": "4.5.4",
+    "@strapi/logger": "4.5.5",
+    "@strapi/plugin-i18n": "4.5.5",
+    "@strapi/plugin-sentry": "4.5.5",
     "@strapi/plugin-seo": "^1.7.5",
-    "@strapi/plugin-users-permissions": "4.5.4",
-    "@strapi/provider-email-sendgrid": "4.5.4",
-    "@strapi/provider-upload-aws-s3": "4.5.4",
-    "@strapi/strapi": "4.5.4",
+    "@strapi/plugin-users-permissions": "4.5.5",
+    "@strapi/provider-email-sendgrid": "4.5.5",
+    "@strapi/provider-upload-aws-s3": "4.5.5",
+    "@strapi/strapi": "4.5.5",
     "add": "^2.0.6",
     "css-loader": "^6.7.1",
     "download-file-sync": "^1.0.4",
@@ -52,7 +52,7 @@
     "strapi-plugin-generate-data": "^1.0.21",
     "strapi-plugin-io": "^1.1.2",
     "strapi-plugin-local-image-sharp": "*",
-    "strapi-plugin-medusajs": "^3.0.3",
+    "strapi-plugin-medusajs": "^4.0.2",
     "strapi-plugin-meilisearch": "^0.8.2",
     "strapi-plugin-sitemap": "^2.0.8",
     "style-loader": "^3.3.1",
@@ -63,7 +63,8 @@
   },
   "strapi": {
     "uuid": "cf4e61c7-d5e1-4c5c-821c-ff7e4f22bb4e",
-    "template": "https://github.com/SGFGOV/strapi-medusa-template.git"
+    "template": "https://github.com/SGFGOV/strapi-medusa-template.git",
+    "telemetryDisabled": true
   },
   "engines": {
     "node": ">=12.x.x <=16.x.x",
