--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "strapi build",
     "lint": "eslint . --ext .js --fix",
     "strapi": "strapi",
-    "test": "jest --forceExit --detectOpenHandles --silent",
+    "test": "jest --forceExit --detectOpenHandles --silent --coverage",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -43,6 +43,7 @@
     "npm": "^8.12.1",
     "patch-package": "^6.5.0",
     "pg": "8.6.0",
+    "qs": "^6.11.0",
     "sentry": "^0.1.2",
     "sharp": "^0.31.3",
     "strapi-google-translator": "^1.0.7",
@@ -52,7 +53,7 @@
     "strapi-plugin-generate-data": "^1.0.21",
     "strapi-plugin-io": "^1.1.2",
     "strapi-plugin-local-image-sharp": "*",
-    "strapi-plugin-medusajs": "^4.0.2",
+    "strapi-plugin-medusajs": "^4.0.3",
     "strapi-plugin-meilisearch": "^0.8.2",
     "strapi-plugin-sitemap": "^2.0.8",
     "style-loader": "^3.3.1",
@@ -84,6 +85,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
+    "jest-html-reporters": "^3.0.11",
+    "jest-progress-bar-reporter": "^1.0.25",
     "prettier": "^2.7.1",
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
