--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "formdata-node": "4.x.x",
     "jest": "^29.3.1",
     "jest-html-reporters": "^3.0.11",
     "jest-progress-bar-reporter": "^1.0.25",
