--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "@sgftech/strapi-plugin-sso": "/home/ec2-user/environment/testing/test-store-enhanced/private-applications/strapi-plugin-sso-saasform/sgftech-strapi-plugin-sso-0.1.10.tgz",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
-    "@strapi/logger": "4.5.5",
-    "@strapi/plugin-i18n": "4.5.5",
-    "@strapi/plugin-sentry": "4.5.5",
+    "@strapi/logger": "4.5.6",
+    "@strapi/plugin-documentation": "4.5.6",
+    "@strapi/plugin-i18n": "4.5.6",
+    "@strapi/plugin-sentry": "4.5.6",
     "@strapi/plugin-seo": "^1.7.5",
-    "@strapi/plugin-users-permissions": "4.5.5",
-    "@strapi/provider-email-sendgrid": "4.5.5",
-    "@strapi/provider-upload-aws-s3": "4.5.5",
-    "@strapi/strapi": "4.5.5",
+    "@strapi/plugin-upload": "4.5.6",
+    "@strapi/plugin-users-permissions": "4.5.6",
+    "@strapi/provider-email-sendgrid": "4.5.6",
+    "@strapi/provider-upload-aws-s3": "4.5.6",
+    "@strapi/provider-upload-local": "4.5.6",
+    "@strapi/strapi": "4.5.6",
     "add": "^2.0.6",
     "css-loader": "^6.7.1",
     "download-file-sync": "^1.0.4",
