--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "strapi build",
     "lint": "eslint . --ext .js --fix",
     "strapi": "strapi",
-    "test": "jest --forceExit --detectOpenHandles --silent --coverage",
+    "test": "jest --forceExit --detectOpenHandles --coverage",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -87,12 +87,12 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "formdata-node": "4.x.x",
+    "formdata-node": "^4.0.0",
     "jest": "^29.3.1",
     "jest-html-reporters": "^3.0.11",
     "jest-progress-bar-reporter": "^1.0.25",
     "prettier": "^2.7.1",
-    "sqlite3": "^5.1.4",
+    "better-sqlite3": "7.4.6",
     "supertest": "^6.3.3",
     "typescript": "^4.8.4",
     "webpack": "^5.73.0"
