--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
+    "awilix": "^8.0.0",
     "axios-mock-adapter": "^1.21.2",
     "babel-preset-medusa-package": "^1.1.13",
     "commitizen": "^4.2.4",
