feat: sso routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": ["src"],
-  "exclude": ["node_modules", "**/*.spec.ts","**/__tests__/**","**/__mocks__/**"]
+  "include": [
+    "src",
+    "src/api/routes/strapi-admin"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "**/__tests__/**",
+    "**/__mocks__/**"
+  ]
 }
