--- a/package.json
+++ b/package.json
@@ -96,5 +96,8 @@
     "supertest": "^6.3.3",
     "typescript": "^4.8.4",
     "webpack": "^5.73.0"
+  },
+  "peerDependencies": {
+    "@strapi/admin": "^4.6.0"
   }
 }
