--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "Cognito"
   ],
   "peerDependencies": {
+    "@strapi/admin": "^4.6.0",
     "@strapi/strapi": "^4.1.7"
   },
   "dependencies": {
-    "generate-password": "^1.7.0"
+    "axios": "^1.3.1",
+    "generate-password": "^1.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "uuid": "^9.0.0"
   },
   "author": {
     "name": "yasudacloud",
@@ -48,9 +52,19 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@strapi/admin": "^4.6.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.28.0",
-    "jest": "^29.3.1"
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
+    "jest-html-reporters": "^3.0.11",
+    "jest-progress-bar-reporter": "^1.0.25",
+    "prettier": "^2.7.1",
+    "supertest": "^6.3.3",
+    "typescript": "^4.8.4",
+    "webpack": "^5.73.0"
   },
   "jest": {
     "testPathIgnorePatterns": [
