fix: ready for the world

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@notum-cz/strapi-plugin-content-versioning": "^0.4.7",
     "@offset-dev/strapi-calendar": "^0.0.9",
     "@sgftech/passport-saasform": "^0.0.20",
-    "@sgftech/strapi-plugin-sso": "/home/ec2-user/environment/testing/test-store-enhanced/private-applications/strapi-plugin-sso-saasform/sgftech-strapi-plugin-sso-0.1.10.tgz",
+    "@sgftech/strapi-plugin-sso": "file:../private-applications/strapi-plugin-sso-saasform/sgftech-strapi-plugin-sso-0.1.10.tgz",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
     "@strapi/logger": "4.5.6",
@@ -53,11 +53,14 @@
     "strapi-html-editor": "^1.0.2",
     "strapi-middleware-cache": "^2.1.8",
     "strapi-plugin-comments": "^2.2.3",
+    "strapi-plugin-country-select": "^1.0.0",
     "strapi-plugin-generate-data": "^1.0.21",
     "strapi-plugin-io": "^1.1.2",
     "strapi-plugin-local-image-sharp": "*",
     "strapi-plugin-medusajs": "^4.0.6",
     "strapi-plugin-meilisearch": "^0.8.2",
+    "strapi-plugin-multi-country-select": "^1.1.0",
+    "strapi-plugin-multi-select": "^1.1.0",
     "strapi-plugin-sitemap": "^2.0.8",
     "style-loader": "^3.3.1",
     "yarn": "^1.22.19"
