--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/protocol-http": "^3.78.0",
     "@aws-sdk/signature-v4": "^3.78.0",
     "@aws-sdk/util-format-url": "^3.78.0",
+    "@mui/system": "^5.11.11",
     "@offset-dev/strapi-calendar": "^0.0.9",
     "@strapi/icons": "^1.4.1",
     "@strapi/logger": "^4.3.6",
@@ -36,6 +37,7 @@
     "koa-passport": "^5.0.0",
     "npm": "^8.12.1",
     "pg": "8.6.0",
+    "react": "^18.2.0",
     "sentry": "^0.1.2",
     "strapi-middleware-cache": "^2.1.8",
     "strapi-plugin-medusajs": "^1.4.6",
