fix: build issues

--- a/packages/strapi-plugin-medusajs/package.json
+++ b/packages/strapi-plugin-medusajs/package.json
@@ -13,7 +13,9 @@
     "@strapi/helper-plugin": "^4.5.4",
     "@types/bcrypt": "^5.0.0",
     "fs": "^0.0.1-security",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@aws-sdk/credential-provider-node": "^3.100.0",
