--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -38,6 +38,7 @@
     "npm": "^8.12.1",
     "pg": "8.6.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sentry": "^0.1.2",
     "strapi-middleware-cache": "^2.1.8",
     "strapi-plugin-medusajs": "^1.4.6",
