--- a/packages/strapi-plugin-sso-medusa/package.json
+++ b/packages/strapi-plugin-sso-medusa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sgftech/strapi-plugin-sso",
+  "name": "strapi-plugin-sso-medusa",
   "version": "0.1.10",
   "description": "Plug-in for single sign-on with Strapi with support for medusa!",
   "strapi": {
