--- a/packages/medusa-plugin-strapi-ts/tsconfig.json
+++ b/packages/medusa-plugin-strapi-ts/tsconfig.json
@@ -1,5 +1,15 @@
 {
-  "extends": "./tsconfig.base.json",
+  "compilerOptions": {
+	  "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "allowJs": false,
+      "rootDir": "src",
+      "baseUrl": "./",
+      "outDir": "./"
+
+  },
+  "extends": "../../tsconfig.json",
+  
   "include": [
     "src",
     "src/api/routes/strapi-admin"
