--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "@sgftech/medusa-tools",
   "private": true,
   "version": "0.0.0",
-    "description": "Monorepo for all Strapi components to sync with medusa",
+  "description": "Monorepo for all Strapi components to sync with medusa",
   "engines": {
     "node": ">14.17.3"
   },
   "workspaces": {
     "packages": [
       "packages/*"
-    ] 
+    ]
   },
   "scripts": {
     "build": "./node_modules/.bin/lerna run --parallel build",
@@ -32,22 +32,23 @@
   },
   "homepage": "https://github.com/adrien2p/medusa-plugins#readme",
   "dependencies": {
-    "rimraf": "^3.0.1"
+    "rimraf": "^3.0.1",
+    "tsconfig.json": "^1.0.11"
   },
   "devDependencies": {
-    "lerna": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
+    "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.0",
     "tslint": "~6.1.0",
     "typescript": "^4.5.5"
   },
   "resolutions": {
-    "@medusajs/medusa":"npm:@sgftech/medusa"
+    "@medusajs/medusa": "latest"
   }
 }
