--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -24,7 +24,9 @@
     "clean": "./node_modules/.bin/rimraf types/ services/ models/ migrations/ api/ subscribers/ utils/ index.js index.map.js",
     "build": "npm run clean && tsc -p tsconfig.json",
     "watch": "tsc --watch",
+    "pretest": "env NODE_ENV=test ",
     "test": "jest --coverage --runInBand"
+    
   },
   "devDependencies": {
     "@medusajs/medusa": "^1.x",
