--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi-medusa",
+  "name": "medusa-strapi",
   "private": true,
   "version": "0.1.1",
   "type": "commonjs",
@@ -10,7 +10,7 @@
     "build": "strapi build",
     "lint": "eslint . --ext .js --fix",
     "strapi": "strapi",
-    "test": "jest --forceExit --detectOpenHandles --coverage",
+    "test": "DOTENV_CONFIG_PATH=.env.test jest --forceExit --detectOpenHandles --coverage --setupFiles=dotenv/config",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -79,11 +79,13 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.20.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
+    "babel-jest": "^29.4.3",
     "babel-loader": "^9.1.0",
     "better-sqlite3": "7.4.6",
     "eslint": "^8.25.0",
@@ -96,6 +98,7 @@
     "jest-progress-bar-reporter": "^1.0.25",
     "prettier": "^2.7.1",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.8.4",
     "webpack": "^5.73.0"
   },
