fix:strapi tests

--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -24,8 +24,7 @@
     "clean": "./node_modules/.bin/rimraf types/ services/ models/ migrations/ api/ subscribers/ utils/ index.js index.map.js",
     "build": "npm run clean && tsc -p tsconfig.json",
     "watch": "tsc --watch",
-    "pretest": "env NODE_ENV=test ",
-    "test": "jest --coverage --runInBand"
+    "test": "jest --coverage --runInBand --setupFiles=dotenv/config"
     
   },
   "devDependencies": {
