--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -10,7 +10,7 @@
     "build": "strapi build",
     "lint": "eslint . --ext .js --fix",
     "strapi": "strapi",
-    "test": "DOTENV_CONFIG_PATH=.env.test jest --forceExit --detectOpenHandles --coverage --setupFiles=dotenv/config",
+    "test": "DOTENV_CONFIG_PATH=.env.test jest --forceExit --detectOpenHandles --coverage --setupFiles=dotenv/config --silent",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -20,22 +20,24 @@
     "@aws-sdk/protocol-http": "^3.78.0",
     "@aws-sdk/signature-v4": "^3.78.0",
     "@aws-sdk/util-format-url": "^3.78.0",
+    "@medusajs/medusa": "npm:@sgftech/medusa",
     "@notum-cz/strapi-plugin-content-versioning": "^0.4.7",
     "@offset-dev/strapi-calendar": "^0.0.9",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
-    "@strapi/logger": "4.5.6",
-    "@strapi/plugin-documentation": "4.5.6",
-    "@strapi/plugin-i18n": "4.5.6",
-    "@strapi/plugin-sentry": "4.5.6",
-    "@strapi/plugin-seo": "^1.7.5",
-    "@strapi/plugin-upload": "4.5.6",
-    "@strapi/plugin-users-permissions": "4.5.6",
-    "@strapi/provider-email-sendgrid": "4.5.6",
-    "@strapi/provider-upload-aws-s3": "4.5.6",
-    "@strapi/provider-upload-local": "4.5.6",
-    "@strapi/strapi": "4.5.6",
+    "@strapi/logger": "4.5.5",
+    "@strapi/plugin-documentation": "4.5.5",
+    "@strapi/plugin-i18n": "4.5.5",
+    "@strapi/plugin-sentry": "4.5.5",
+    "@strapi/plugin-seo": "1.7.5",
+    "@strapi/plugin-upload": "4.5.5",
+    "@strapi/plugin-users-permissions": "4.5.5",
+    "@strapi/provider-email-sendgrid": "4.5.5",
+    "@strapi/provider-upload-aws-s3": "4.5.5",
+    "@strapi/provider-upload-local": "4.5.5",
+    "@strapi/strapi": "4.5.5",
     "add": "^2.0.6",
+    "codemirror": "5.65.11",
     "css-loader": "^6.7.1",
     "download-file-sync": "^1.0.4",
     "fs": "^0.0.1-security",
@@ -82,6 +84,8 @@
     "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@strapi/admin": "4.5.5",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
@@ -103,6 +107,9 @@
     "webpack": "^5.73.0"
   },
   "peerDependencies": {
-    "@strapi/admin": "^4.6.0"
+    "@lezer/common": "^1.0.0"
+  },
+  "resolutions": {
+    "codemirror": "5.65.11"
   }
 }
