--- a/packages/strapi-plugin-medusajs/package.json
+++ b/packages/strapi-plugin-medusajs/package.json
@@ -10,7 +10,6 @@
   },
   "repository": "https://github.com/SGFGOV/strapi-plugin-medusajs.git",
   "dependencies": {
-    "@strapi/helper-plugin": "^4.5.4",
     "@types/bcrypt": "^5.0.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1"
@@ -22,14 +21,6 @@
     "@aws-sdk/signature-v4": "^3.78.0",
     "@aws-sdk/util-format-url": "^3.78.0",
     "@babel/core": "^7.20.2",
-    "@strapi/icons": "^1.4.0",
-    "@strapi/logger": "^4.3.6",
-    "@strapi/plugin-i18n": "4.4.1",
-    "@strapi/plugin-seo": "^1.7.5",
-    "@strapi/plugin-users-permissions": "4.4.1",
-    "@strapi/provider-upload-aws-s3": "^4.5.0",
-    "@strapi/strapi": "^4.5.0",
-    "@strapi/typescript-utils": "^4.5.0",
     "@types/jest": "^29.2.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/koa": "^2.13.5",
@@ -76,7 +67,18 @@
   "peerDependencies": {
     "bcryptjs": "^2.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@strapi/logger": "4.5.5",
+    "@strapi/plugin-documentation": "4.5.5",
+    "@strapi/plugin-i18n": "4.5.5",
+    "@strapi/plugin-sentry": "4.5.5",
+    "@strapi/plugin-seo": "^1.7.5",
+    "@strapi/plugin-upload": "4.5.5",
+    "@strapi/plugin-users-permissions": "4.5.5",
+    "@strapi/provider-email-sendgrid": "4.5.5",
+    "@strapi/provider-upload-aws-s3": "4.5.5",
+    "@strapi/provider-upload-local": "4.5.5",
+    "@strapi/strapi": "4.5.5"
   },
   "files": [
     "dist",
