--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -32,8 +32,9 @@ jobs:
 
       - name: Install ESLint
         run: |
-          npm install eslint@8.10.0
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
+          yarn add --global eslint@8.10.0
+          yarn add --global @microsoft/eslint-formatter-sarif@2.1.7
+          yarn install --frozen-lockfile
 
       - name: Run ESLint
         run: npx eslint .
