--- a/packages/strapi-plugin-medusajs/package.json
+++ b/packages/strapi-plugin-medusajs/package.json
@@ -8,7 +8,10 @@
     "description": "This plugin enables handshaking and sync between strapi and medusajs",
     "kind": "plugin"
   },
-  "repository": "https://github.com/SGFGOV/strapi-plugin-medusajs.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SGFGOV/medusa-strapi-repo/"
+  },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "fs": "^0.0.1-security",
