--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medusa-plugin-strapi-ts",
-  "version": "4.3.15",
+  "version": "4.3.16",
   "description": "A plugin for medusa to use strapi in the backend as the cms in typescript",
   "main": "index.js",
   "types": "index.d.ts",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@medusajs/medusa": "^1.x",
+    "@strapi/plugin-users-permissions": "^4.6.1",
     "@types/express": "^4.17.14",
     "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.9",
@@ -36,8 +37,8 @@
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "awilix": "^8.0.0",
-    "axios-mock-adapter": "^1.21.2",
     "axios": "^0.27.2",
+    "axios-mock-adapter": "^1.21.2",
     "babel-preset-medusa-package": "^1.1.13",
     "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
@@ -57,14 +58,13 @@
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.5.5",
-    "@strapi/plugin-users-permissions": "^4.6.1"
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
     "@medusajs/medusa": "^1.7.11",
+    "@strapi/plugin-users-permissions": "^4.6.1",
     "axios": "^0.27.2",
-    "medusa-interfaces": "latest",
-    "@strapi/plugin-users-permissions": "^4.6.1"
+    "medusa-interfaces": "latest"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
