--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -26,9 +26,21 @@ jobs:
       contents: read
       security-events: write
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-    steps:
+      strategy:
+      matrix:
+        node-verion: [16.x]
+     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          access_token: ${{ github.token }}
       - name: Checkout code
         uses: actions/checkout@v3
+      
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.1.1
+        with:
+          node-version: ${{ matrix.node-verion }}
 
       - name: Install ESLint
         run: |
