--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build ./packages/medusa-strapi --file Dockerfile --tag medusa-strapi-docker:$(date +%s)
+      run: docker build ./packages/medusa-strapi --file ./packages/medusa-strapi/Dockerfile --tag medusa-strapi-docker:$(date +%s)
