--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
         with:
-          access_token: ${{ github.token }}
+          repo-token: ${{ secrets.EXECUTION_TOKEN }}
       - name: Checkout code
         uses: actions/checkout@v3
       
