--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Cancel Previous Runs
       uses: styfle/cancel-workflow-action@0.9.1
       with:
-        repo-token: ${{ secrets.EXECUTION_TOKEN }}
+        access_token: ${{ secrets.EXECUTION_TOKEN }}
