--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,5 +23,10 @@ jobs:
         access_token: ${{ secrets.EXECUTION_TOKEN }}
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag medusa-strapi:$(date +%s)
+      run: docker build . \
+          -t sgf-strapi \
+          --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
+          --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
+          --build-arg AWS_DEFAULT_REGION="ap-south-1" \
+          --no-cache \
       working-directory: ./packages/medusa-strapi
