--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,9 @@ jobs:
       uses: styfle/cancel-workflow-action@0.9.1
       with:
         access_token: ${{ secrets.EXECUTION_TOKEN }}
-
+    - name: List files 
+      run: ls
+      working-directory: ./packages/medusa-strapi
     - name: Build the Docker image
       run: docker build . -t sgf-strapi --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID  --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY --build-arg AWS_DEFAULT_REGION="ap-south-1"  --no-cache
       working-directory: ./packages/medusa-strapi
