--- a/packages/medusa-strapi/.gitignore
+++ b/packages/medusa-strapi/.gitignore
@@ -114,10 +114,11 @@ build
 .strapi-updater.json
 .vscode
 dist
-!./src/
+!src/api/**/*
 ./src/plugins/**/*
 .env
 jest-html-reporters-attach/
 
 !babel.config.js
 !.env.test
+!!src/**/*
