--- a/packages/medusa-strapi/.env.test
+++ b/packages/medusa-strapi/.env.test
@@ -45,3 +45,7 @@ MEDUSA_BACKEND_ADMIN=http://127.0.0.1:7000
 SELF_URL=http://127.0.0.1:1337
 SUPERUSER_EMAIL=support@medusa-commerce.com
 SUPERUSER_PASSWORD=MedusaStrapi1
+
+
+MEILISEARCH_HOST=http://localhost:7700
+MEILISEARCH_MASTER_KEY="MeliSearchMasterKey"
