--- a/packages/medusa-strapi/.env.test
+++ b/packages/medusa-strapi/.env.test
@@ -27,10 +27,10 @@ S3_ACCESS_SECRET_KEY=NOTHING
 S3_BUCKET=ANY-BUCKET
 S3_REGION=ap-south-1
 
-
- REDIS_HOST=localhost
- REDIS_PORT=6570
- REDIS_PASSWORD=Dummy
+#Redis
+REDIS_HOST=localhost
+REDIS_PORT=6570
+REDIS_PASSWORD=Dummy
 
 STRAPI_BACKEND_URL=http://127.0.0.1:1337
 STRAPI_GOOGLE_TRANSLATE_API_TOKEN=your strapi api token
@@ -46,6 +46,6 @@ SELF_URL=http://127.0.0.1:1337
 SUPERUSER_EMAIL=support@medusa-commerce.com
 SUPERUSER_PASSWORD=MedusaStrapi1
 
-
+#Melisearch
 MEILISEARCH_HOST=http://localhost:7700
 MEILISEARCH_MASTER_KEY="MeliSearchMasterKey"
