fix: block logging senstive data except in case of testing environment (#6)
* fix: block logging senstive data except in case of testing environment

* test: new testcase

* test: updated mocks

* test: updated health check clear

* test: introduced self testmode

* test: updated self test mode

* chore: added new resolutions

* feat integration testing - WIP

---------

Co-authored-by: SGF <SGF@sourcegoodfood.com>

--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -18,13 +18,14 @@
     "e-commerce",
     "content management"
   ],
-  "author": "Govind Diwakar <govind.diwakar@gmail.com>",
+  "author": "Govind Diwakar",
   "license": "MIT",
   "scripts": {
+    "integration-test":"yarn test",
     "clean": "./node_modules/.bin/rimraf types/ services/ models/ migrations/ api/ subscribers/ utils/ index.js index.map.js",
     "build": "npm run clean && tsc -p tsconfig.json",
     "watch": "tsc --watch",
-    "test": "jest --coverage --runInBand --setupFiles=dotenv/config"
+    "test": "jest --coverage --runInBand --setupFiles=dotenv/config --silent"
   },
   "devDependencies": {
     "@medusajs/medusa": "^1.8.2",
