--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "scripts": {
+    "integration-test":"./node_modules/.bin/lerna run integration-test --concurrency 1",
     "build": "./node_modules/.bin/lerna run --parallel build",
     "bootstrap": "./node_modules/.bin/lerna bootstrap",
     "clean": "./node_modules/.bin/lerna run --parallel clean",
@@ -47,5 +48,15 @@
     "prettier": "^2.5.0",
     "tslint": "~6.1.0",
     "typescript": "^4.5.5"
+  },
+  "resolutions": {
+    "**/jsonwebtoken":"^9.0.0",
+    "**/passport":"^0.6.0",
+    "**/sqlite3": "^5.1.5",
+    "**/xml2js":"^0.5.0",
+    "**/parse-path":"^5.0.0",
+    "**/parse-url":"^8.1.0",
+    "**/sharp":"0.32.0",
+    "**/class-validator":"^0.14.0"
   }
 }
